--- a/Abbohubb/templates/index.html
+++ b/Abbohubb/templates/index.html
@@ -349,7 +349,8 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 AbboHub. Alle rechten voorbehouden.</p>
+  <p>Sommige links op AbboHub zijn affiliate links. Als je via zo’n link bestelt, ontvangen wij mogelijk een commissie – zonder extra kosten voor jou.</p>
+  <p>&copy; 2025 AbboHub. Alle rechten voorbehouden.</p>
     <nav class="footer-nav">
       <ul>
         <li><a href="{{ url_for('privacy_cookieverklaring') }}">Privacy en Cookieverklaring</a></li>
